<resources>
    <string name="hello">Hello World, KukuiCupActivity!</string>
    <string name="app_name">KukuiCup</string>
    <string-array name="activityTypes">
        <item >Saving Action</item>
        <item >Energy Challenge</item>
        <item >Video</item>
    </string-array>
    <string name="savAction">Saving Action</string>
    <string name="enrgChall">Energy Challenge</string>
    <string name="video">Video</string>
    <string name="btnDone">Done!</string>
    <string name="btnQuiz">Do the Quiz</string>
    <string name="btnTakePhoto">Take a photo</string>
    <string name="btnUploadPhoto">Upload photo</string>
    <string name="rewardLabel">Reward</string>
    <string name="pointsLabel">Points</string>
    <string name="titleLevelBlocked">Level blocked</string>
    <string name="titleMinPoints">Level completed</string>
    <string name="titleEasterEgg">It\'s your lucky day!</string>
    <string name="msgLevelBlocked">You need to complete the previous level to continue</string>
    <string name="msgEasterEgg">It\'s a perfect day to give you 5 points. Enjoy it!</string>
    <string name="btnOk">OK</string>
    <string name="msgToastLevel">You can do it!</string>
    <string name="msgReward">You have won</string>
    <string name="msgRewardPoint">points</string>
    <string name="msgToastUpload">Uploaded successfully</string>
    <string name="msgCongrats">Congratulations! Get your points!</string>
    <string name="msgCongratsAlt">Congratulations!</string>
    <string name="resumeDay">/day</string>
    <string name="resumeFloor">/floor</string>
    <string name="resumeTeam">/winner</string>
    <string name="btnStart">Start Challenge</string>
    <string name="btnContinue">Continue Challenge</string>
    <string name="msgToastQuiz">You can do it better!</string>
    <string name="msgQuizAttemptTitle">You have no more attempts</string>
    <string name="msgQuizAttempt">Try again next time. Pay attention to the video to win a badge!</string>
    <string name="msgQuiz1L1">You have won the bagde of Level 1 and 30 points.</string>
    <string name="msgQuiz1L2">You have won the bagde of Level 2 and 30 points.</string>
    <string name="msgQuiz2L2">You have won 30 points.</string>
    <string name="msgQuiz1L3">You have won the bagde of Level 3+ and 30 points.</string>
    <string name="msgQuiz2L3">You have won the bagde of Level 3 and 30 points.</string>
    <string name="msgBadge1">You have won the bagde Off Before Sleep.</string>
    <string name="msgBadge2">You have won the bagde Use Stairs.</string>
    <string name="msgBadge3">You have won the bagde Empty Room.</string>
    <string name="msgBadge4">You have won the bagde Team Play.</string>
    <string name="btnFinish">Finish</string>
    <string name="btnContinueJoke">Continue</string>
    <string name="jokeMsg">"Well done! Now enjoy this joke..."</string>
    <string name="savTip">Saving tip!</string>
    <string name="msgLogOut">Do you really want to log out of KukuiCupBCN?</string>
    <string name="msgDeletePlayer">Do you really want to delete this player?</string>
    <string name="msgDeleteTeam">Do you really want to delete this team?</string>
    <string name="msgDeleteTournament">Do you really want to delete this tournament?</string>
    <string name="msgPosBtn">Yes</string>
    <string name="msgNegBtn">No</string>
    <string name="yourTeamRkg">------ YOUR TEAM!</string>
    <string name="allPlayersLabel">All Players</string>
    <string name="allTeamsLabel">All Teams</string>
    <string name="allTournamentsLabel">All Tournaments</string>
    <string name="allRegisterLabel">Register Activity</string>
    <string name="newPlayerLabel">New Player</string>
    <string name="newTeamLabel">New Team</string>
    <string name="newTourLabel">New Tournament</string>
    <string name="editPlayerLabel">Edit Player</string>
    <string name="editTeamLabel">Edit Team</string>
    <string name="editTournamentLabel">Edit Tournament</string>
    <string name="msgPass">You must fill all the gaps</string>
    <string name="msgId">Identification ...</string>
    <string name="msgLogResp">Login Response:</string>
    <string name="msgChangeSuccess">Change successfull</string>
    <string name="msgChangeAnfConfirm">New password and confirmation must be the same</string>
    <string name="msgInvPass">Invalid password</string>
    <string name="welcomeMsg">Welcome to KukuiCupBCN</string>
    <string name="hintUser">Username</string>
    <string name="hintPass">Password</string>
    <string name="btnAdminTour">Admin Tournament</string>
    <string name="btnViewTour">Edit Tournament</string>
    <string name="btnCreateTeam">Add New Team</string>
    <string name="btnViewPlayers">View Players</string>
    <string name="btnViewTeams">View Teams</string>
    <string name="btnViewRegister">Activity Register</string>
    <string name="btnCreatePlayer">Add New Player</string>
    <string name="btnRankingPlayers">Players Ranking</string>
    <string name="startTournament">Create tournament</string>
    <string name="initDate">Init Date (yyyy-mm-dd)</string>
    <string name="endDate">End Date (yyyy-mm-dd)</string>
    <string name="playerNameLabel">Player Name</string>
    <string name="teamNameLabel">Team Name</string>
    <string name="teamSelectLabel">Select Team:</string>
    <string name="tournamentNameLabel">Tournament Name</string>
    <string name="tournamentSelectLabel">Select Tournament:</string>
    <string name="initDateLabel">Init Date</string>
    <string name="btnAddPlayer">Create Player</string>
    <string name="btnAddTeam">Create Team</string>
    <string name="btnSave">Save Changes</string>
    <string name="btnDelete">Delete</string>
    <string name="btnLogout">Log Out</string>
    <string name="changePassLabel">Change Password</string>
    <string name="actualPassLabel">Actual password:</string>
    <string name="newPassLabel">New password:</string>
    <string name="confirmPassLabel">Confirm password:</string>
    <string name="loadTeams">Loading teams. Please wait...</string>
    <string name="loadRegister">Loading register. Please wait...</string>
    <string name="creatingPlayers">Creating Player...</string>
    <string name="loadPlayers">Loading players. Please wait...</string>
    <string name="creatingTeam">Creating Team...</string>
    <string name="noTournament">No tournament available at this moment. Please, contact Administrator.</string>
    <string name="userEnter">Please enter your username and password!</string>
    <string name="invalidLogin">Invalid username or password</string>
    <string name="level1Label">Level 1</string>
    <string name="level2Label">Level 2</string>
    <string name="level3Label">Level 3</string>
    <string name="dashRkgUser">User Panel</string>
    <string name="dashRkgTeam">Ranking</string>
    <string name="rankTeams">Teams Ranking</string>
    <string name="activityReg">Activity Register</string>
    <string name="dashPoints">Points:</string>
    <string name="daysRemaining">KukuiCupBCN end date: </string>
    <string name="badgeCollect">Badge Collection:</string>
    <string name="noEndDate">no tournament available</string>
    <string name="nextLevel">Try activities of the next level! Reach 467 points to unlock all the activities again.</string>
    <string name="minPoints">You have achieved the minimum points of the competition. Now you can do again all the activities!</string>
    <string name="savActL1_1">Computer responsible</string>
    <string name="descL1_saveAct1">Configure your computer and any external monitor to sleep after 20 minutes of inactivity.
        Once you have changed your settings, please take a photo showing the new settings for use in verification</string>
    <string name="savActL1_2">Desk light</string>
    <string name="descL1_saveAct2">Commit to using task lighting (like a desk lamp) instead of overhead room lights when possible.
        Press the Done! button when you make this saving action.</string>
    <string name="savActL1_3">Like Kukui</string>
    <string name="descL1_saveAct3">Show support for the Kukui Cup by Liking the Kukui Cup page on Facebook.
        Follow the link, click on the Like button, and then back on this page click the Done! button.</string>
    <string name="savActL2_1">My room consumption</string>
    <string name="descL2_saveAct1">Calculate energy consumption for every appliance in your room. Write how many hours you use it every day. Then add up all appliances to know room consumption and take a photo for verification.
        Press the Done! button when you make this saving action.</string>
    <string name="savActL2_2">Use daylight</string>
    <string name="descL2_saveAct2">During the day, turn off your room light and use daylight (if it\'s possible in your room).
        Press the Done! button when you make this saving action.</string>
    <string name="savActL2_3">Consumption in POST-IT</string>
    <string name="descL2_saveAct3">Write in a post-it the energetic consumption and hours of daily use of any domestic device. Then calculate his daily consumption, paste the post-it and take a photo for verification.</string>
    <string name="savActL2_4">Search the LED</string>
    <string name="descL2_saveAct4">Take a look around and search for any device that uses LED bulbs and take a picture of it.</string>
    <string name="savActL3_1">Washing machine time</string>
    <string name="descL3_saveAct1">What time of the day do you do your laundry?</string>
    <string name="descL3_saveAct1_opt1">Morning</string>
    <string name="descL3_saveAct1_opt2">Afternoon</string>
    <string name="descL3_saveAct1_opt3">Night</string>
    <string name="descL3_saveAct1_tip1">Kilowatt is cheaper if you do your laundry between 23h and 8h in the morning!</string>
    <string name="descL3_saveAct1_tip2">Kilowatt is cheaper if you do your laundry between 14h and 16h. Try to avoid doing it between 20h and 22h!</string>
    <string name="descL3_saveAct1_tip3">Kilowatt is more expensive between 20h and 22h. Try to avoid those hours!</string>
    <string name="savActL3_2">Washing machine charge</string>
    <string name="descL3_saveAct2">When you do your laundry, how is the washing machine?</string>
    <string name="descL3_saveAct2_opt1">Full charged</string>
    <string name="descL3_saveAct2_opt2">Half charged</string>
    <string name="descL3_saveAct2_tip1">If your washing machine has low consumption, doing the laundry with full charge washing machine will save you some liters of water. But don\'t do it excessively full!</string>
    <string name="descL3_saveAct2_tip2">Is not advisable to do your laundry if there are not enough clothes. Wait until there are more to save water!</string>
    <string name="enrgChalL1_1">Off before sleep</string>
    <string name="resumeL1_enrgChal1">Did you turn off and unplug all electrical appliances before going to sleep?</string>
    <string name="descL1_enrgChal1">Will you get the next challenge? Off and unplug all electrical devices in your room before going to sleep.
        Perform this action for 5 consecutive days to win the challenge.</string>
    <string name="enrgChalL2_1">Use stairs</string>
    <string name="resumeL2_enrgChal1">Did you use the stairs today?</string>
    <string name="descL2_enrgChal1">Will you get the next challenge?
        Use the stairs instead of using the elevator to win the challenge. Try this everyday to save more energy and feel more healthy!</string>
    <string name="enrgChalL2_2">Change for LED</string>
    <string name="resumeL2_enrgChal2">Did you change any lightbulb for a LED?</string>
    <string name="descL2_enrgChal2">Will you get the next challenge?
        Change any lightbulb for a LED to win the challenge.</string>
    <string name="enrgChalL2_3">Off empty room</string>
    <string name="resumeL2_enrgChal3">Did you turn off and unplug all electrical devices in the empty rooms? </string>
</resources>