<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:background="@drawable/background">



    <Button
        android:id="@+id/btnViewTeams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/btnViewTeams"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:background="#5F4C0B"
        android:textColor="#BEF781" />
    <Button
        android:id="@+id/btnCreateTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text= "@string/btnCreateTeam"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:background="#5F4C0B"
        android:textColor="#BEF781" />
    <!--  Button to view all players screen -->
    <Button
        android:id="@+id/btnViewPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/btnViewPlayers"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:background="#5F4C0B"
        android:textColor="#BEF781" />

    <!--  Button to create a new player screen -->
    <Button
        android:id="@+id/btnCreatePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/btnCreatePlayer"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:background="#5F4C0B"
        android:textColor="#BEF781" />

    <Button
        android:id="@+id/btnViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/btnViewRegister"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:background="#5F4C0B"
        android:textColor="#BEF781" />

</LinearLayout>